# oby

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/oby/: Cargo.toml
crates/oby-core/: Cargo.toml
crates/oby-core/src/: capturer.rs  entry.rs  hook.rs  lib.rs  wire.rs
crates/oby-hook/: Cargo.toml
crates/oby-hook/src/: composer.rs  env_gate.rs  main.rs  registry.rs
crates/oby-hook/src/capturers/: mod.rs  read.rs
crates/oby-hook/src/capturers/bash/: mod.rs  pre_filter.rs  rewrite.rs  scanner.rs  shell.rs
crates/oby-hook/tests/: dispatch.rs  version.rs  xtrace.rs
crates/oby-tee/: Cargo.toml
crates/oby-tee/src/: main.rs
crates/oby-tee/tests/: integration.rs
crates/oby/src/: install.rs  key.rs  main.rs  metrics.rs  probe.rs  pty.rs  ring.rs  run.rs  sockets.rs  tui.rs
docs/: architecture.md
docs/plans/: v0.1.md  v0.2.1.md  v0.2.2.md  v0.2.md
docs/specs/: 2026-05-28-v0.2-design.md  2026-06-09-v0.2.2-design.md
docs/testing/: v0.1-manual.md  v0.2-manual.md
homebrew-tap/Formula/: oby.rb
