[package]
name = "oby-hook"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
oby-core = { path = "../oby-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "oby-hook"
path = "src/main.rs"
