[package]
name = "oby-hook"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PreToolUse / PostToolUse / SubagentStop hook dispatcher for oby. Routes Claude Code tool-call payloads to per-tool Capturers, rewrites Bash commands to recover discarded stdout/stderr via oby-tee, composes with peer hooks, and reports back to the oby wrapper over a unix socket."
readme = "../../README.md"
keywords = ["claude-code", "observability", "agent", "hook"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
oby-core = { path = "../oby-core", version = "0.2.1" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "oby-hook"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
