[package]
name = "oby-tee"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
oby-core = { path = "../oby-core" }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "oby-tee"
path = "src/main.rs"
