[package]
name = "oby-tee"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "In-pipeline helper for oby. Reads stdin, streams bytes to the wrapper's per-agent unix socket with a JSON header, fail-open. Injected by oby-hook's PreToolUse rewrite to capture stdout/stderr that would otherwise be discarded."
readme = "../../README.md"
keywords = ["claude-code", "observability", "agent", "hook", "tee"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
oby-core = { path = "../oby-core", version = "0.1.0" }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "oby-tee"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }
