[package]
name = "oby-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Wrapper-daemon for oby. `oby claude` launches Claude Code inside a wrapped pty, listens on per-agent unix sockets for hook traffic from oby-hook + oby-tee, and paints a togglable activity feed showing every tool call (with recovered stdout/stderr that the agent's shell pipelines discarded). Installs the `oby` binary."
readme = "../../README.md"
keywords = ["claude-code", "observability", "agent", "tui"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
oby-core = { path = "../oby-core", version = "0.2.2" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
portable-pty = { workspace = true }
xdg = { workspace = true }
uuid = { version = "1", features = ["v4"] }
which = "6"

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "oby"
path = "src/main.rs"
